--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,31 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
+
+      <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
+
+        <div class="form-group">
+          <label for="projectName">Project Name</label>
+          <input 
+            name="projectName"
+            class="form-control"
+            type="text"
+            [formControlName]="'projectName'">
+        </div>
+
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input 
+            name="email" 
+            class="form-control" 
+            type="text" 
+            [formControlName]="'email'">
+        </div>
+
+        <button class="btn btn-primary" [disabled]="!signupForm.valid">Submit</button>
+
+      </form>
+
       <!--
           Create a Form with the following Controls and Validators
           1) Project Name (should not be empty)
