--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,6 +22,14 @@
             [formControlName]="'email'">
         </div>
 
+        <div class="form-group">
+          <label for="status">Project Status</label>
+          <select name="status" class="form-control" [formControlName]="'projectStatus'">
+            <option *ngFor="let s of status" [value]="s">{{s}}</option>
+          </select>
+        </div>
+
+
         <button class="btn btn-primary" [disabled]="!signupForm.valid">Submit</button>
 
       </form>
